Fix overflow in mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-Reset *,
+/* Reset  */
+*,
 ::after,
 ::before {
   box-sizing: border-box;
@@ -6,9 +7,14 @@ Reset *,
   margin: 0;
 }
 
+* {
+  outline: 1px solid red;
+}
+
 img,
 video {
   max-width: 100%;
+  height: auto;
 }
 
 /* style colors, fonts */
@@ -27,17 +33,22 @@ body {
   background-color: var(--main-bg-c);
 }
 
+main {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0;
+}
+
 h1 {
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   text-align: center;
   animation: init 3s ease-in-out;
-  transform: scale(1.3);
   background-image: linear-gradient(
     340deg,
     rgba(57, 61, 63, 1) 10%,
     rgba(98, 146, 158, 1) 49%,
     rgba(198, 197, 185, 1) 68%,
-    rgba(84, 106, 123, 1) 99%
+    rgb(58, 166, 248) 99%
   );
   background-clip: text;
   color: transparent;
@@ -61,7 +72,7 @@ h1 {
   border: none;
   border-radius: 0.3rem;
   box-shadow: 0.15rem 0.15rem var(--accent-color);
-  font-size: clamp(1rem, 3vw, 1.1rem);
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
 }
 
 #items-submit::placeholder {
@@ -72,7 +83,7 @@ h1 {
   outline: none;
   border: none;
   box-shadow: 0 0 0 0.15rem var(--accent-color) inset;
-  font-size: clamp(1rem, 3vw, 1.1rem);
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
 
   color: var(--accent-color);
 }
@@ -87,7 +98,7 @@ h1 {
   border: none;
   box-shadow: 0.1rem 0.1rem var(--main-color);
   color: var(--main-bg-c);
-  font-size: clamp(1rem, 3vw, 2rem);
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
 }
 
 .items {
@@ -106,7 +117,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   margin-top: 0.5rem;
-  font-size: clamp(1.2rem, 3vw, 2rem);
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
 }
 
 .listcheck {
